--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ url: "https://faxn.github.io" # the base hostname & protocol for your site
 markdown: kramdown
 
 
-permalink: /:categories/:title.html
+permalink: /:categories/:title:output_ext
 
 
 social_links:
@@ -36,3 +36,15 @@ social_links:
 
 favicon: https://avatars3.githubusercontent.com/u/3074727?v=3
 usecdn: true
+
+collections:
+    projects:
+        output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: projects
+    values:
+      layout: project
+      permalink: /:collection/:name:output_ext
