--- a/_halberd.yml
+++ b/_halberd.yml
@@ -1,6 +1,6 @@
 
 
-baseurl: "/faxn/_site" # the subpath of your site, e.g. /blog
+baseurl: "/faxn/_site/" # the subpath of your site, e.g. /blog
 url: "http://halberd.zapto.org" # the base hostname & protocol for your site
 usecdn: false
 
