--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 
-title: Blake Curry's Site
+title: Blake Curry
 email: blake.curry@gmx.us
 description: > # this means to ignore newlines until "baseurl:"
   This is a Portfolio site for Blake Curry(a.k.a. Faxn).
@@ -21,6 +21,8 @@ markdown: kramdown
 
 permalink: /:categories/:title:output_ext
 
+#Google analytics tracking id
+ga_id: UA-97202752-1
 
 social_links:
 -
